--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ nav ul {
   margin: 0;
   padding: 0;
 }
+p {
+  margin-bottom: 20px; /* Espaçamento entre parágrafos */
+}
 nav ul li {
   margin: 0 15px;
 }
