--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* definindo as fontes principais */
 body {
   font-family: Helvetica, Arial, sans-serif;
   margin: 0;
@@ -7,8 +6,15 @@ body {
   color: #333;
 }
 
-header nav {
+header {
+  width: 100%;
   background-color: #333;
+  position: sticky; /* fixa no topo ao rolar a página */
+  top: 0;
+  z-index: 1000;
+}
+
+header nav {
   padding: 10px 0;
 }
 
